--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -156,8 +156,8 @@
     </div>
 </footer>
 
-<script src="scripts/prepossessing.js"></script>
-<script src="scripts/animation.js" type="text/javascript"></script>
+<script src="scripts/prepossessing_AllDir.js"></script>
+<script src="scripts/animation_AllDir.js" type="text/javascript"></script>
 <script src="scripts/table.js" type="text/javascript"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
